--- a/RadixAH/RadixAH/RadixAH.vcxproj
+++ b/RadixAH/RadixAH/RadixAH.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="LinkedList.h" />
     <ClInclude Include="ListNode.h" />
     <ClInclude Include="ObjectPool.h" />
+    <ClInclude Include="Queue.h" />
     <ClInclude Include="Stack.h" />
   </ItemGroup>
   <ItemGroup>
