--- a/RadixAH/RadixAH/RadixAH.vcxproj.filters
+++ b/RadixAH/RadixAH/RadixAH.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="ObjectPool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Queue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
