--- a/RadixAH/RadixAH/RadixAH.vcxproj.filters
+++ b/RadixAH/RadixAH/RadixAH.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="Heap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Map.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
